--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=reciclaville
 # Config PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=Itamar1234
+spring.datasource.password=30012003Jr
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Config JPA
